tests/miniJava/neg/000146_mutation.MiniJava
class java { public static class Main ( String [ ] java ) { { } } }
